--- a/JS kadai/index.html
+++ b/JS kadai/index.html
@@ -5,6 +5,7 @@
     <title>落ち物ゲー</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
     <script src="script.js" defer></script>
 </head>
 <body>
